--- a/Day06/Atm/pom.xml
+++ b/Day06/Atm/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Contactbook</artifactId>
+    <artifactId>Atm</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
